--- a/todo.txt
+++ b/todo.txt
@@ -5,4 +5,7 @@
 * infected spartan bodies?
 * phantom turret animations
 * Allied AI
-* at least one new floodfight map that does not have engineers
+* Make elites more aggressive with the needler
+* Gold elite boss w/ sword during chieftain wave
+* Buff elite body health
+* Fix brutes spawning when they shouldn't (duplicate character palette entries, the C# only accounts for the last one found)
