--- a/todo.txt
+++ b/todo.txt
@@ -7,5 +7,5 @@
 * Allied AI
 * Make elites more aggressive with the needler
 * Gold elite boss w/ sword during chieftain wave
-* Buff elite body health
+* Elites spawning with brute shot (swap with carbine)
 * Fix brutes spawning when they shouldn't (duplicate character palette entries, the C# only accounts for the last one found)
