--- a/todo.txt
+++ b/todo.txt
@@ -6,10 +6,8 @@
 * Gold elite boss w/ sword during chieftain wave
 * elites have no dialogue for some stupid reason
 * some elites still have brute shots
-* elite ultra doesn't pull sword out when stuck, still charges the player
 * make it so only high ranking elites pull out swords when stuck
 * elites use player melee animations instead of AI animations for carbine (melee almost never hits because of it)
-* Minor and Major elites dont throw nades and dont throw more when catch is enabled
 * Give drones with brute plasma rifles regular blue ones instead
 * Invincibility despawns from player inventory on new round start
 * elites sometimes spawn on brute waves
@@ -17,4 +15,4 @@
 * grunts spawn in jackal sniper spawns
 * enemies randomly stop spawning on alpha site
 * elites have trouble spawning in phantoms
-* 
+* Make elites jump into empty vehicles
