--- a/todo.txt
+++ b/todo.txt
@@ -10,4 +10,5 @@
 * enemies randomly stop spawning on alpha site (PHANTOM PROBLEM)
 * elites have trouble spawning in phantoms
 * Make elites jump into empty vehicles
-* Update readme with instructions for buildmaps
+* decrease elite melee range/aggressiveness
+* minor and major elites still dont throw grenades (maybe squad issue???)
