--- a/todo.txt
+++ b/todo.txt
@@ -12,3 +12,4 @@
 * Make elites jump into empty vehicles
 * decrease elite melee range/aggressiveness
 * minor and major elites still dont throw grenades (maybe squad issue???)
+* add h2a beam rifle from ramp
