(WIP) sc140 flood
flood can't leave some spawn rooms, unsure if fixable FML

--- a/todo.txt
+++ b/todo.txt
@@ -12,6 +12,7 @@
 * weapon lockers in map spawns
 * rework flood cmds 
 * flood version of phantom
+* flood get stuck in spawn rooms on windward
 
 ===MAYBE TO DO===
 * friendly engineers in flood mode?
