--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,8 @@
 * rework flood cmds 
 * flood version of phantom
 * flood get stuck in spawn rooms on windward
+* replace more brute flood with elite flood (cus of vehicle animations)
+* do something with the mission objectives text in pause menu
 
 ===MAYBE TO DO===
 * friendly engineers in flood mode?
