--- a/todo.txt
+++ b/todo.txt
@@ -5,18 +5,16 @@
 * enemies randomly stop spawning on alpha site (PHANTOM PROBLEM?) (https://discord.com/channels/415700035398008843/1190031935829983242/1368812131910287400)
 * fix wraiths not dying when grenades are planted
 * weapon lockers in map spawns
-* rework flood cmds 
 * flood version of phantom
 * flood get stuck in spawn rooms on windward
-* replace more brute flood with elite flood (cus of vehicle animations)
-* do something with the mission objectives text in pause menu
 * fix invisible weapon crate (spawns on alpha site, also needed for weapon racks)
 * grunt variants shoot plasma pistol too fast (the pale colored one)
-* investigate gauss hog respawns on lost platoon (possibly doesnt work)
-* decrease flood carrier spawn rate
+* gauss hog on lost platoon doesnt respawn
 
 ===MAYBE TO DO===
 * friendly engineers in flood mode?
 * give elites equipment (regen fields?)
 * Make elites jump into empty vehicles
 * infected spartan bodies?
+* do something with the mission objectives text in pause menu
+* rework flood cmds 
